--- a/NLT_IRIS_practicum_Michiel_en_Thijs.ipynb
+++ b/NLT_IRIS_practicum_Michiel_en_Thijs.ipynb
@@ -28,7 +28,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "HUTS # **NLT IRIS Practicum - Michiel & Thijs**\n",
+        "# **NLT IRIS Practicum - Michiel & Thijs**\n",
         "Google Colab slaat bestanden niet op, daarom maken wij gebruik van google drive om elke keer de dataset te downloaden. Ook hebben wij de datasets vast opgesplits zodat dit niet in de code hoefde, dit was voor ons iets makkelijker te begrijpen. De dataset die wij hebben gebruikt heet IRIS: [Download iris.csv](https://drive.google.com/uc?export=download&id=1COAoDNobWbTQpPbRrN0-8a7KAHLsD5KB)"
       ],
       "metadata": {
